--- a/package.json
+++ b/package.json
@@ -56,15 +56,27 @@
     }
   },
   "dependencies": {
+    "@types/emojione": "^2.2.6",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
+    "@types/react-window-infinite-loader": "^1.0.3",
+    "aminoapps-reapi": "^1.0.0",
+    "aminoclient": "^1.0.6",
+    "asturur-noto-emoji": "^6.0.0",
     "connected-react-router": "^6.8.0",
+    "emojione": "^4.5.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-content-loader": "^5.1.2",
     "react-dom": "^16.12.0",
+    "react-polling": "^1.0.9",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
+    "react-window": "^1.8.5",
+    "react-window-infinite-loader": "^1.0.5",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "roboto-fontface": "^0.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
